--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,11 +1,11 @@
-= link_to "Tms", root_path, :class => 'brand'
-%ul.nav
+= link_to "湖北银监局学分管理系统", root_path, :class => 'brand'
+%ul.nav.pull-right
   - if user_signed_in?
     %li
-      = link_to 'Logout', destroy_user_session_path, :method=>'delete'
+      = link_to '注销', destroy_user_session_path, :method=>'delete'
   - else
     %li
-      = link_to 'Login', new_user_session_path
+      = link_to '登录', new_user_session_path
   - if user_signed_in?
     %li
       = link_to 'Edit account', edit_user_registration_path
@@ -14,4 +14,4 @@
         = link_to 'Admin', users_path
   - else
     %li
-      = link_to 'Sign up', new_user_registration_path
+      = link_to '注册', new_user_registration_path
