--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,21 +1,22 @@
-%h2 Sign up
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
+%h2 注册
+= form_for(resource, :as => resource_name, :url => registration_path(resource_name),
+           :html => {:class => 'form-horizontal'}) do |f|
   = devise_error_messages!
-  %p
-    = f.label :name
-    %br/
-    = f.text_field :name
-  %div
-    = f.label :email
-    %br/
-    = f.email_field :email
-  %div
-    = f.label :password
-    %br/
-    = f.password_field :password
-  %div
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation
-  %div= f.submit "Sign up"
+  .control-group
+    = f.label "姓名", :class => 'control-label'
+    .controls
+      = f.text_field :name
+  .control-group
+    = f.label "账号", :class => 'control-label'
+    .controls
+      = f.email_field :email
+  .control-group
+    = f.label "密码", class: 'control-label'
+    .controls
+      = f.password_field :password
+  .control-group
+    = f.label "重复密码", class: 'control-label'
+    .controls
+      = f.password_field :password_confirmation
+  %div= f.submit "注册"
 = render "devise/shared/links"
