--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,27 +2,31 @@
 %html
   %head
     %meta{:charset => "utf-8"}
-      %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
-        %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
-          %title= content_for?(:title) ? yield(:title) : "Tms"
-          %meta{:content => "", :name => "description"}
-            %meta{:content => "", :name => "author"}
-              = stylesheet_link_tag    "application", :media => "all"
-              = javascript_include_tag "application"
-              = csrf_meta_tags
-              = yield(:head)
+    %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
+    %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
+    %title= content_for?(:title) ? yield(:title) : "Tms"
+    %meta{:content => "", :name => "description"}
+    %meta{:content => "", :name => "author"}
+    = stylesheet_link_tag    "application", :media => "all"
+    = javascript_include_tag "application"
+    = csrf_meta_tags
+    = yield(:head)
   %body
     %header.navbar.navbar-fixed-top
       %nav.navbar-inner
-        .container
+        .container-fluid
           = render 'layouts/navigation'
     #main{:role => "main"}
       .container
-        .content
-          .row
-            .span12
-              = render 'layouts/messages'
-              = yield
-          %footer
+        .row
+          #menu.span3
+            = render 'layouts/menu'
+          .span9
+            = render 'layouts/messages'
+            = yield
       / ! end of .container
     / ! end of #main
+    %footer.navbar.navbar-fixed-bottom            
+      %nav.navbar-inner
+        .container-fluid
+          = render 'layouts/footer'
