--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,22 +1,26 @@
-%h2 注册
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name),
-           :html => {:class => 'form-horizontal'}) do |f|
+%h2 用户注册
+= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
   = devise_error_messages!
-  .control-group
-    = f.label "姓名", :class => 'control-label'
-    .controls
-      = f.text_field :name
-  .control-group
-    = f.label "账号", :class => 'control-label'
-    .controls
-      = f.email_field :email
-  .control-group
-    = f.label "密码", class: 'control-label'
-    .controls
-      = f.password_field :password
-  .control-group
-    = f.label "重复密码", class: 'control-label'
-    .controls
-      = f.password_field :password_confirmation
+  %p
+    = f.label "姓名"
+    = f.text_field :name
+  %div 
+    = f.label "部门"
+    = f.collection_select :department, Department.all, :id, :name  
+  %div
+    = f.label "账号"
+    = f.email_field :email
+  %div  
+    = f.label "密码"
+    = f.password_field :password
+  %div
+    = f.label "重复密码"
+    = f.password_field :password_confirmation
+  %div
+    = f.label "职务"
+    = f.collection_select :rank, User::RANKS.to_pair_with_index, :second, :first
+  %div
+    = f.label "角色"
+    = f.collection_select :role, User::ROLES.to_pair_with_index, :second, :first
   %div= f.submit "注册"
 = render "devise/shared/links"
