--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -8,7 +8,7 @@
       = link_to '登录', new_user_session_path
   - if user_signed_in?
     %li
-      = link_to 'Edit account', edit_user_registration_path
+      = link_to '更新', edit_user_registration_path
     - if current_user.has_role? :admin
       %li
         = link_to 'Admin', users_path
