--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -6,7 +6,7 @@
     = f.text_field :name
   %div 
     = f.label "部门"
-    = f.collection_select :department, Department.all, :id, :name, :selected => resource.department_id
+    = f.collection_select :department_id, Department.all, :id, :name, :selected => resource.department_id
   %div
     = f.label "账号"
     = f.email_field :email
@@ -25,10 +25,10 @@
     = f.password_field :current_password
   %div
     = f.label "职务"
-    = f.collection_select :rank, User::RANKS.to_pair_with_index, :second, :first
+    = f.collection_select :rank, User::RANKS.to_pair_with_index, :second, :first, :selected => resource.rank
   %div
     = f.label "角色"
-    = f.collection_select :role, User::ROLES.to_pair_with_index, :second, :first
+    = f.collection_select :role, User::ROLES.to_pair_with_index, :second, :first, :selected => resource.role
   %div= f.submit "确定"
 %p
   = link_to "注销", registration_path(resource_name), :data => {:confirm => "确定吗?"}, :method => :delete
