--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,4 +1,5 @@
 %h2 用户注册
+- resource.department ||= Department.new
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
   = devise_error_messages!
   %p
@@ -6,7 +7,7 @@
     = f.text_field :name
   %div 
     = f.label "部门"
-    = f.collection_select :department, Department.all, :id, :name  
+    = f.collection_select :department_id, Department.all, :id, :name  
   %div
     = f.label "账号"
     = f.email_field :email
