--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,17 +1,12 @@
 = link_to "湖北银监局学分管理系统", root_path, :class => 'brand'
 %ul.nav.pull-right
   - if user_signed_in?
-    %li
-      = link_to '注销', destroy_user_session_path, :method=>'delete'
+    %li= link_to '注销', destroy_user_session_path, :method=>'delete'
   - else
-    %li
-      = link_to '登录', new_user_session_path
+    %li= link_to '登录', new_user_session_path
   - if user_signed_in?
-    %li
-      = link_to '更新', edit_user_registration_path
-    - if current_user.has_role? :admin
-      %li
-        = link_to 'Admin', users_path
+    %li= link_to '更新', edit_user_registration_path
+    -# - if current_user.has_role? :admin
+    -#   %li= link_to 'Admin', users_path
   - else
-    %li
-      = link_to '注册', new_user_registration_path
+    %li= link_to '注册', new_user_registration_path
