--- a/app/views/trains/_form.html.haml
+++ b/app/views/trains/_form.html.haml
@@ -5,10 +5,10 @@
     %p
       = f.label "培训类别"
       = f.collection_select :category_id, TrainCategory.all, :id, :name
-    .input-append.date#dp
-      = f.label "开始时间"
-      = f.text_field :start_date, class: "datepicker", id: "dp1"
-    = f.input :end_date
+    = f.label "开始时间"
+    = f.text_field :start_date, class: "datepicker", value: "#{Date.today}", readonly: true
+    = f.label "结束时间"
+    = f.text_field :end_date, class: "datepicker", value: "#{Date.today}", readonly: true
     = f.input :duration
     = f.input :organizer
 
