--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,27 +1,16 @@
 %h2 用户注册
 - resource.department ||= Department.new
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
+= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
   = devise_error_messages!
-  %p
-    = f.label "姓名"
-    = f.text_field :name
-  %div 
-    = f.label "部门"
-    = f.collection_select :department_id, Department.all, :id, :name  
-  %div
-    = f.label "账号"
-    = f.email_field :email
-  %div  
-    = f.label "密码"
-    = f.password_field :password
-  %div
-    = f.label "重复密码"
-    = f.password_field :password_confirmation
-  %div
-    = f.label "职务"
-    = f.collection_select :rank, User::RANKS.to_pair_with_index, :second, :first
-  %div
-    = f.label "角色"
-    = f.collection_select :role, User::ROLES.to_pair_with_index, :second, :first
-  %div= f.submit "注册"
+  
+  .form-inputs
+    = f.input :name
+    = f.association :department
+    = f.input :email
+    = f.input :password, as: :password
+    = f.input :password_confirmation, as: :password
+    = f.input :position, collection: Position.all, label_method: :name, value_method: :id
+    
+  .form-actions
+    = f.button :submit, class: 'btn-primary'
 = render "devise/shared/links"
