--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -2,5 +2,5 @@
   %li.brand 版权所有
   %li
     %a{:href => "mailto:luowenbo@cbrc.gov.cn"} 
-      %i.icon-envelope
+      %i.icon-envelope.icon-white
       联系邮箱
