--- a/app/views/trains/_form.html.haml
+++ b/app/views/trains/_form.html.haml
@@ -5,11 +5,11 @@
     = f.association :category
     = f.association :trainee, include_blank: false
     = f.input :name
-    = f.input :start_date, as: :string
+    = f.input :start_date, as: :string, hint: '格式: 2012-08-21'
     = f.input :end_date, as: :string
     = f.input :period
     = f.input :organizer
     = f.input :comment, input_html: {class: "span4", rows: 6}
 
   .form-actions
-    = f.button :submit
+    = f.button :submit, class: 'btn-primary'
