--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -1,11 +1,8 @@
 %ul.nav.nav-tabs.nav-stacked
   %li.nav-header 培训管理
   %li.active
-    = link_to "脱产培训", new_train_path
+    = link_to "培训登记", new_train_path
   %li= link_to "培训记录", trains_path  
-  %li= link_to "讲座培训"
-  %li= link_to "在岗培训"
-  %li= link_to "再培训"
 
 - if can? :manage, :all  
   %ul.nav.nav-tabs.nav-stacked
