--- a/app/views/trains/_form.html.haml
+++ b/app/views/trains/_form.html.haml
@@ -2,12 +2,14 @@
   = f.error_notification
 
   .form-inputs
-    = f.association :category
+    = f.input :category, collection: Train::CATEGORIES
     = f.association :trainee, include_blank: false
     = f.input :name
     = f.input :start_date, as: :string, hint: '格式: 2012-08-21'
     = f.input :end_date, as: :string
-    = f.input :period
+    = f.input :period, wrapper: :append do
+      = f.input_field :period
+      = content_tag :span, "天", class: "add-on"
     = f.input :organizer
     = f.input :comment, input_html: {class: "span4", rows: 6}
 
