first running version

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,6 +22,7 @@
           #menu.span3
             = render 'layouts/menu'
           .span9
+            = render 'layouts/path'
             = render 'layouts/messages'
             = yield
       / ! end of .container
