first pagination version

--- a/app/views/departments/index.html.haml
+++ b/app/views/departments/index.html.haml
@@ -1,5 +1,3 @@
-%h1 部门列表
-
 %table.table.table-striped
   %tr
     %th 部门名称
@@ -16,6 +14,5 @@
       %td= link_to '编辑', edit_department_path(department)
       %td= link_to '删除', department, :confirm => '确定删除吗？', :method => :delete
 
-%br
-
+  = will_paginate @departments    
 = link_to '新增部门', new_department_path
