--- a/app/views/layouts/_path.html.haml
+++ b/app/views/layouts/_path.html.haml
@@ -3,6 +3,6 @@
     - @breadcrumbs[0..-2].each do |crumb|
       %li
         = link_to crumb[:name], crumb[:url], crumb[:options]
-        %span.divider= >
+        %span.divider >
     %li.active
       = link_to @breadcrumbs.last[:name], @breadcrumbs[:url], @breadcrumbs[:options]
