--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,6 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require dataTables/jquery.dataTables.bootstrap
  *= require_tree .
 */
 
@@ -24,6 +25,3 @@
   box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
 
-form {
-  
-}
