--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,1 +1,8 @@
-%h3 欢迎使用湖北银监局学分管理系统
+.page-header
+  %h3 欢迎使用湖北银监局学分管理系统
+
+.well
+  %h4 湖北银监局学分管理系统使用说明
+  %ul 
+    %li 本系统需要#{link_to("登录", new_user_session_path)}后方可使用，如未注册，请与人事处联系
+    %li 系统注册后，用户名为用户内网邮箱账号，密码为666666。用户登录系统后，请立即更改初始密码。
