--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -1,16 +1,21 @@
-%ul.nav.nav-tabs.nav-stacked
-  %li.nav-header 培训管理
-  %li
-    = link_to "培训登记", new_train_path
-  %li= link_to "培训记录", trains_path  
+.row
+  %ul.nav.nav-tabs.nav-stacked
+    %li.nav-header.alert-info 培训管理
+    %li= link_to "培训登记", new_train_path
+    %li= link_to "培训记录", trains_path  
 
 - if can? :manage, :all  
-  %ul.nav.nav-tabs.nav-stacked
-    %li.nav-header 系统管理    
-    %li
-      = link_to "用户管理", users_path
-    %li
-      = link_to "部门维护", departments_path
-    %li
-      = link_to "统计分析"
-    
+  .row
+    %ul.nav.nav-tabs.nav-stacked
+      %li.nav-header.alert-info 系统管理    
+      %li= link_to "用户管理", users_path
+      %li= link_to "部门管理", departments_path
+      %li= link_to "培训类别管理", categories_path
+      
+  .row
+    %ul.nav.nav-tabs.nav-stacked
+      %l.nav-header.alert-info 统计分析
+      %li= link_to "学分排名"
+      %li= link_to "学分明细"
+      %li= link_to "总体情况"
+
