--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,6 +1,8 @@
-%ul.nav
-  %li.brand 版权所有
-  %li
-    %a{:href => "mailto:luowenbo@cbrc.gov.cn"} 
-      %i.icon-envelope.icon-white
-      联系邮箱
+.container
+  .row
+    .span6.offset1
+      %h3 湖北银监局版权所有
+    .span4
+      %a{:href => "mailto:luowenbo@cbrc.gov.cn"} 
+        %i.icon-envelope.icon-white
+        联系邮箱
