footer adjust and personal trains

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,8 +1,13 @@
 .container
   .row
-    .span6.offset1
-      %h3 湖北银监局版权所有
+    .span4.brand
+      %h4 湖北银监局版权所有
+    .span4    
+      %span 建议使用Chrome、Fixfox等浏览器，或IE9.0以上版本。
+      %br
+      %span 业务主管部门：人事处; 联系电话: 85565XXX      
     .span4
-      %a{:href => "mailto:luowenbo@cbrc.gov.cn"} 
-        %i.icon-envelope.icon-white
-        联系邮箱
+      .buttons.pull-right
+        %a{href: "mailto:luowenbo@cbrc.gov.cn", class: "btn btn-large btn-info"} 
+          %i.icon-envelope.icon-white
+          联系管理员
