--- a/app/views/trains/_form.html.haml
+++ b/app/views/trains/_form.html.haml
@@ -4,11 +4,11 @@
   .form-inputs
     -# = f.input :category, collection: Train::CATEGORIES
     = f.input :category_id, required: true do
-      = f.select :category_id, nested_set_options(Category, @category){|i| "#{'--' * i.level} #{i.name}"} 
+      = f.select :category_id, nested_set_options(Category, @category){|i| "#{'--' * i.level} #{i.name}"}
     = f.association :trainee, include_blank: false, required: true
     = f.input :name, required: true
-    = f.input :start_date, as: :string, hint: '格式: 2012-08-21', required: true
-    = f.input :end_date, as: :string, required: true
+    = f.input :start_date, as: :string, placeholder: '格式: 2012-08-21', required: true
+    = f.input :end_date, as: :string, placeholder: '格式: 2012-08-21', required: true
     = f.input :period, wrapper: :append do
       = f.input_field :period
       = content_tag :span, "天", class: "add-on"
