--- a/app/views/departments/index.html.haml
+++ b/app/views/departments/index.html.haml
@@ -1,4 +1,4 @@
-%table.table.table-striped.table-bordered.datatable
+%table#departments.table.table-striped.table-bordered.datatable
   %thead
     %tr
       %th 部门名称
