--- a/app/views/trains/index.html.haml
+++ b/app/views/trains/index.html.haml
@@ -37,5 +37,5 @@
 %br
 
 .well
-  = link_to '培训登记', new_train_path, class: "btn btn-large"
+  = link_to '学分登记', new_train_path, class: "btn btn-large"
 
