--- a/app/views/departments/_form.html.haml
+++ b/app/views/departments/_form.html.haml
@@ -2,8 +2,8 @@
   = f.error_notification
 
   .form-inputs
-    = f.input :name
-    = f.input :order
+    = f.input :name, required: true
+    = f.input :order, collection: 1..20, required: true
 
   .form-actions
-    = f.button :submit
+    = f.button :submit, class: "btn-primary"
