--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,4 +1,3 @@
-%h2 个人信息设置
 = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), 
                   :html => { :method => :put }) do |f|
   = devise_error_messages!
@@ -7,8 +6,8 @@
     = f.input :name, required: true
     = f.association :department, required: true
     = f.input :email, required: true
-    = f.input :password, as: :password, autocomplete: "off", required: true
-    = f.input :password_confirmation, as: :password, required: true
+    = f.input :password, as: :password, autocomplete: "off", hint: "不修改密码时此项留空", required: true
+    = f.input :password_confirmation, as: :password, hint: "不修改密码时此项留空", required: true
     = f.input :current_password, as: :password, hint: "请输入原密码确认变更", required: true
     = f.association :position, required: true
     
