--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -17,6 +17,7 @@
   .row
     %ul.nav.nav-tabs.nav-stacked
       %l.nav-header.alert-info 统计分析
+      %li= link_to '生产报表', new_report_path
       %li= link_to "学分排名"
       %li= link_to "学分明细"
       %li= link_to "总体情况"
