--- a/app/views/positions/index.html.haml
+++ b/app/views/positions/index.html.haml
@@ -1,4 +1,4 @@
-%table.table.table-striped.table-bordered.datatable
+%table#positions.table.table-striped.table-bordered.datatable
   %thead
     %tr
       %th 职位名称
