--- a/app/views/trains/register.html.haml
+++ b/app/views/trains/register.html.haml
@@ -1,10 +1,5 @@
-.well
-  .pull-right
-    导出:
-    = link_to "CSV", trains_path(format: "csv"), class: "btn"
-    \|
-    = link_to "Excel", trains_path(format: "xls"), class: "btn"
-%table.table.table-striped.table-bordered.datatable
+= render 'export'
+%table#trains.table.table-striped.table-bordered.datatable
   %thead
     %tr
       %th 项目名称
