--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,4 +1,4 @@
-%table.table.table-striped.table-bordered.datatable
+%table#users.table.table-striped.table-bordered.datatable
   %thead
     %tr
       %th 姓名
