--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -3,6 +3,7 @@
     %li.nav-header.alert-info 学分管理
     %li= link_to "学分登记", new_train_path
     %li= link_to "我的学分", trains_path  
+    %li= link_to "修改密码", edit_user_password_path
     %li= link_to "我的登记簿", register_trains_path
 
 - if can? :manage, :all  
@@ -12,12 +13,13 @@
       %li= link_to "用户管理", users_path
       %li= link_to "部门管理", departments_path
       %li= link_to "职务管理", positions_path
+      %li= link_to "角色管理", roles_path
       -# %li= link_to "培训类别管理", categories_path
       
   .row
     %ul.nav.nav-tabs.nav-stacked
       %l.nav-header.alert-info 统计分析
-      %li= link_to '生产报表', new_report_path
+      %li= link_to '生成报表', new_report_path
       %li= link_to "学分排名"
       %li= link_to "学分明细"
       %li= link_to "总体情况"
