--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -3,16 +3,18 @@
   = devise_error_messages!
   
   .form-inputs
-    = f.input :name, required: true
-    = f.association :department, required: true
-    = f.input :email, required: true
-    = f.input :password, as: :password, autocomplete: "off", hint: "不修改密码时此项留空", required: true
-    = f.input :password_confirmation, as: :password, hint: "不修改密码时此项留空", required: true
+    - if can? :manage, User
+      = f.input :name, required: true
+      = f.association :department, required: true
+      = f.input :email, required: true
+      = f.association :position, required: true
+      = f.association :roles, as: :check_boxes, item_wrapper_class: 'inline'
+    = f.input :password, as: :password, autocomplete: "off", hint: "不修改密码时此项留空"
+    = f.input :password_confirmation, as: :password, hint: "不修改密码时此项留空"
     = f.input :current_password, as: :password, hint: "请输入原密码确认变更", required: true
-    = f.association :position, required: true
     
   .form-actions
     = f.button :submit, class: 'btn-primary'
 %p
-= link_to "注销", registration_path(resource_name), :data => {:confirm => "确定吗?"}, :method => :delete
-= link_to "返回", :back
+-# = link_to "注销", registration_path(resource_name), :data => {:confirm => "确定吗?"}, :method => :delete
+-# = link_to "返回", :back
