--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -2,10 +2,9 @@
 %ul.nav.pull-right
   - if user_signed_in?
     %li= link_to "欢迎您，#{current_user.name}", edit_user_registration_path
+    %li= link_to '修改密码', edit_user_password_path
     - if current_user.has_role? :admin
       %li= link_to '系统管理', users_path
-  -# - else
-  -#   %li= link_to '注册', new_user_registration_path
   - if user_signed_in?
     %li= link_to '注销', destroy_user_session_path, :method=>'delete'
   - else
