--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,6 +1,5 @@
-= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), 
-                  :html => { :method => :put }) do |f|
-  = devise_error_messages!
+= simple_form_for(@user) do |f|
+  = f.error_notification
   
   .form-inputs
     - if can? :manage, User
