--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,19 +1,12 @@
-= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), 
-                  :html => { :method => :put }) do |f|
-  = devise_error_messages!
-  
-  .form-inputs
-    - if can? :manage, User
-      = f.input :name, required: true
-      = f.association :department, required: true
-      = f.input :email, required: true
-      = f.association :position, required: true
-      = f.association :roles, as: :check_boxes, item_wrapper_class: 'inline'
-    = f.input :password, as: :password, autocomplete: "off", hint: "不修改密码时此项留空"
-    = f.input :password_confirmation, as: :password, hint: "不修改密码时此项留空"
-    
-  .form-actions
-    = f.button :submit, class: 'btn-primary'
-%p
--# = link_to "注销", registration_path(resource_name), :data => {:confirm => "确定吗?"}, :method => :delete
--# = link_to "返回", :back
+- if can? :manage, User
+  = render 'form'
+- else
+  = simple_form_for(@user, url: update_password_user_path(@user)) do |f|
+    = f.error_notification
+
+    .form-inputs
+      = f.input :password, as: :password, required: true
+      = f.input :password_confirmation, as: :password, required: true
+
+    .form-actions
+      = f.button :submit, class: 'btn-primary'
